[package]
name = "rust-las-printer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "converter"
path = "src/bin/converter.rs"

[[bin]]
name = "viewer"
path = "src/bin/viewer.rs"

[dependencies]
bevy = "0.10.1"
bevy_panorbit_camera = "0.5.2"
clap = { version = "4.3.1", features = ["derive"] }
env_logger = "0.10.0"
fastblur = "0.1.1"
itertools = "0.10.5"
las = { version = "0.8.1", features = ["laz"] }
log = "0.4.18"
medians = "2.2.6"
png = "0.17.8"
postcard = { version = "1.0.4", features = ["alloc", "use-std"] }
quantiles = "0.7.1"
quantogram = "0.4.4"
serde = "1.0.163"
stl_io = "0.7.0"
threadpool = "1.8.1"
walkdir = "2.3.3"
